care-australia-uat/force-app/main/default/objects/Cart_Items__c/Cart_Items__c.object-meta.xml
<CustomObject>
    <label>Cart Items</label>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>Cart Itens Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cart Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>