care-australia-uat/force-app/main/default/objects/Cart_Items__c/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lender</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>Cart_Items</relationshipName>
    <type>Lookup</type>
</CustomField>