care-australia-uat/force-app/main/default/objects/Cart_Items__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Cart__c</columns>
    <columns>Amount__c</columns>
    <columns>Lender__c</columns>
    <columns>Loan__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>